k8s/easyshop-deploymant.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: easyshop-deployment
  namespace: easyshop-ns
 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop

  template:
    metadata:
      labels:
        app: easyshop

    spec:
      containers:
        - name: easyshop-container
          image: learnersubha/easyshop-image:latest
          imagePullPolicy: Always  
          ports:
            - containerPort: 3000

          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /
              port: 3000
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 25
            periodSeconds:
