k8s/easyshop-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: easyshop-svc
  namespace: easyshop-namespace

spec:
  selector:
    app: easyshop
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
