k8s/easyshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easyshop-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
  - host: "34.242.255.167.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: easyshop-svc
            port:
              number: 80
